name:                 sdlaudio
version:              0.1.0.0
build-type:           Simple
cabal-version:        >= 1.10

executable sdlaudio
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:        base, sdl2 == 2.1.0, vector, conduit-audio, conduit-audio-sndfile, conduit, resourcet, transformers
  default-language:     Haskell2010
